# dagtoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dagtoc.py
.github/workflows/: build-for-release.yml  build-release.yml  check.yml
completions/: _dagtoc  dagtoc.bash  dagtoc.fish  dagtoc.nu
demo/: Makefile.kdl  Makefile.pdf-no-toc  Makefile.pdf.toc  Makefile.toc
docs/: README_CN.md
src/: cli.rs  codec.rs  handlers.rs  main.rs
src/toc/: error.rs  mod.rs  spec.rs  toc.rs
