[package]
name = "dagtoc"
version = "5.0.0"
authors = ["Collide <three-dim-sky@foxmail.com>"]
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["pdf"]
description = "A CLI tool for operating pdf contents"
repository = "https://github.com/TD-Sky/dagtoc"
documentation = "https://github.com/TD-Sky/dagtoc"
readme = "README.md"
license = "GPL-3.0"
include = ["src/**/*", "Cargo.toml", "Cargo.lock", "LICENSE*", "README.md"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
kdl = "4.6"
mupdf = { git = "https://github.com/TD-Sky/mupdf-rs.git", branch = "set-outlines" }
clap_complete = "4.3.2"
clap_complete_nushell = "4.3.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
kdl = { workspace = true }
mupdf = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }

[profile.release]
lto = true
